--- a/store-frontend/public/index.html
+++ b/store-frontend/public/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="./favicon.ico">
   <title>尚品汇</title>
 
-  <link rel="stylesheet" href="<%= BASE_URL %>css/reset.css">
-  <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_3762998_j55crsz5f9i.css ">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/font_3762998_j55crsz5f9i.css">
 </head>
 
 <body>
